sandbox/output
TicketDispenserTest.java:37: error: illegal '.'
        int turnNumber = dispenser..getTurnTicket().getTurnNumber();
                                   ^
1 error
